--- a/src/AndcultureCode.CSharp.Data.SqlServer/AndcultureCode.CSharp.Data.SqlServer.csproj
+++ b/src/AndcultureCode.CSharp.Data.SqlServer/AndcultureCode.CSharp.Data.SqlServer.csproj
@@ -18,6 +18,8 @@
 
   <ItemGroup>
     <PackageReference Include="AndcultureCode.CSharp.Core" Version="0.5.1" />
+    <PackageReference Include="AndcultureCode.CSharp.Extensions" Version="0.6.0" />
+    <PackageReference Include="EFCore.BulkExtensions" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.0.0" />
@@ -25,6 +27,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Cultures\*.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
