--- a/src/AndcultureCode.CSharp.Data.SqlServer/AndcultureCode.CSharp.Data.SqlServer.csproj
+++ b/src/AndcultureCode.CSharp.Data.SqlServer/AndcultureCode.CSharp.Data.SqlServer.csproj
@@ -13,20 +13,17 @@
     <PackageProjectUrl>https://github.com/AndcultureCode/AndcultureCode.CSharp.Data.SqlServer</PackageProjectUrl>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>0.0.2</Version>
-    <VsxmdAutoDeleteXml>true</VsxmdAutoDeleteXml>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AndcultureCode.CSharp.Core" Version="0.5.1" />
+    <PackageReference Include="AndcultureCode.CSharp.Core" Version="1.0.0-beta1" />
     <PackageReference Include="AndcultureCode.CSharp.Extensions" Version="0.6.0" />
     <PackageReference Include="EFCore.BulkExtensions" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.0.0" />
-    <PackageReference Include="Vsxmd" Version="1.4.5">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+    <PackageReference Include="Respawn" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
